feat: add workspace entities and backend platform updates
- add workspace, workspace member, and workspace invitation entities mapped to publisher identifiers

- introduce rate limiting, refresh token cleanup scheduling, and business exception infrastructure

- align review, mini-app, app-version, and auth flows with the updated backend constraints

- include the mini app upload guide documentation update